--- a/blog_style.css
+++ b/blog_style.css
@@ -18,6 +18,7 @@ main {
     grid-template-rows: auto;
     grid-template-areas:
     "header header header"
+    "nav nav nav"
     "table table quotes"
     "s1 s1 quotes"
     "s2 s2 quotes"
@@ -40,6 +41,7 @@ header {
     background: #613659;
     padding: 4px 0;
     background-image: url('_assets/pics/concert.jpg');
+    opacity: 80%;
     height: 300px;
     background-size: cover;
     background-position: 40%;
@@ -50,6 +52,7 @@ header h1 {
     font-family: 'Keania One', cursive;
     font-size: 75px;
     color: #fff;
+    text-shadow: 7px 7px 5px #45253f;
     text-align: center;
 }
 
@@ -59,6 +62,28 @@ header h2 {
     font-size: 40px;
     color: #fff;
     text-align: center;
+}
+
+nav {
+    background-color: #613659;
+}
+
+#navigation ul {
+    display: flex;
+    flex-direction: row;
+    /* display: inline; */
+}
+
+#navLinks {
+    justify-content: space-evenly;
+}
+
+#navLinks a {
+    color: #fff;
+}
+
+#navLinks a:hover {
+    color: #cac7c9;
 }
 
 table, tr, th, td {
@@ -86,6 +111,10 @@ main section {
 
 main section h2 {
     color:#613659;
+}
+
+.navigation {
+    grid-area: nav;
 }
 
 .quotes h2 {
@@ -171,7 +200,7 @@ main section h2 {
     text-align: right;
     color: #613659;
     font-size: 14px;
-    margin-right: 10px;
+    margin-right: 100px;
 }
 
 #Rich {
@@ -196,6 +225,22 @@ span {
 li {
     display: flex;
     flex-wrap:  wrap;
+}
+
+footer {
+    display: flex;
+}
+
+#designer {
+    margin-right: 5px;
+}
+
+a:hover {
+    color: #8a547f;
+}
+
+a:link {
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 600px){
